# rust-workshop

./: Cargo.toml
.github/workflows/: ci_workflow.yml  release.yml
day_1/: README.md
day_1/hello-clippy/: Cargo.toml
day_1/hello-clippy/src/: lib.rs
day_2/: README.md
day_2/methods/src/: lib.rs
day_3/: README.md
day_3/pangram/: Cargo.toml
day_3/pangram/src/: lib.rs
day_3/pangram/tests/: pangram.rs
day_4/badlib/: Cargo.toml
day_4/badlib/src/: lib.rs
day_4/shippable/: Cargo.toml
day_4/shippable/src/: main.rs
final_project/paekli-cli/: Cargo.toml
final_project/paekli-cli/src/: main.rs
